--- a/action.yml
+++ b/action.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      LANG_PATH: foldertest
+      LANG_PATH: .
     steps:
       - uses: actions/checkout@v2
         with:
