--- a/action.yml
+++ b/action.yml
@@ -5,14 +5,24 @@ branding:
   icon: file-text
   color: blue
 
+inputs:
+  lang_path:
+    description: 'Path to the folder that contains all lang files'
+    default: .
+    required: false
+  default_file:
+    description: 'The name of the YAML file that contains all default options. These values are used to fill in any missing info in the other files.'
+    default: 'default.yml'
+    required: false
+
 on: [push]
 
 jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      LANG_PATH: .
-      DEFAULTS: default_file.yml
+      LANG_PATH: ${{github.event.inputs.lang_path}}
+      DEFAULTS: ${{github.event.inputs.default}}
     steps:
       - uses: actions/checkout@v2
         with:
