--- a/action.yml
+++ b/action.yml
@@ -26,6 +26,7 @@ runs:
     DEFAULTS: ${INPUT_DEFAULT_FILE}
   using: "composite"
   steps:
+    steps:
     - uses: actions/checkout@v2
       with:
         persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal token
