--- a/action.yml
+++ b/action.yml
@@ -22,17 +22,35 @@ on: [push]
 
 runs:
   using: "composite"
+  env:
+    LANG_PATH: ${INPUT_LANG_PATH}
+    DEFAULTS: ${INPUT_DEFAULT_FILE}
   steps:
     - run: echo Hello ${INPUT_LANG_PATH}
       shell: bash
     - id: random-number-generator
       run: echo "::set-output name=random-id::$(echo $RANDOM)"
       shell: bash
-
+    - name: Clone YAML-localisation-sync
+      run: git clone https://github.com/Nuytemans-Dieter/YAML-localisation-sync.git
+      shell: sh
+    - name: Building the project
+      run: |
+        cd YAML-localisation-sync
+        mvn package
+      shell: sh
+    - name: Moving JAR file
+      run: cp YAML-localisation-sync/target/YamlLocalisation.jar ${LANG_PATH}
+      shell: sh
+    - name: Running JAR file
+      run: |
+        cd ${LANG_PATH}
+        java -jar YamlLocalisation.jar ${DEFAULTS}
+      shell: sh
+      
+      
 # runs:
-#   env:
-#     LANG_PATH: ${INPUT_LANG_PATH}
-#     DEFAULTS: ${INPUT_DEFAULT_FILE}
+
 #   using: "composite"
 #   steps:
 #     - uses: actions/checkout@v2
@@ -43,22 +61,9 @@ runs:
 #       uses: actions/setup-java@v1
 #       with:
 #         java-version: 1.8
-#     - name: Clone YAML-localisation-sync
-#       run: git clone https://github.com/Nuytemans-Dieter/YAML-localisation-sync.git
-#       shell: sh
-#     - name: Building the project
-#       run: |
-#         cd YAML-localisation-sync
-#         mvn package
-#       shell: sh
-#     - name: Moving JAR file
-#       run: cp YAML-localisation-sync/target/YamlLocalisation.jar ${LANG_PATH}
-#       shell: sh
-#     - name: Running JAR file
-#       run: |
-#         cd ${LANG_PATH}
-#         java -jar YamlLocalisation.jar ${DEFAULTS}
-#       shell: sh
+
+
+
 #     - name: Repo cleanup
 #       run: |
 #         rm -rf YAML-localisation-sync
