--- a/action.yml
+++ b/action.yml
@@ -36,9 +36,9 @@ runs:
 #         java-version: 1.8
     - run: echo Hello ${INPUT_LANG_PATH}
       shell: bash
-    - name: Clone YAML-localisation-sync
-      run: git clone https://github.com/Nuytemans-Dieter/YAML-localisation-sync.git
-      shell: sh
+#     - name: Clone YAML-localisation-sync
+#       run: git clone https://github.com/Nuytemans-Dieter/YAML-localisation-sync.git
+#       shell: sh
 #     - name: Building the project
 #       run: |
 #         cd YAML-localisation-sync
