--- a/action.yml
+++ b/action.yml
@@ -34,9 +34,10 @@ runs:
 #       uses: actions/setup-java@v1
 #       with:
 #         java-version: 1.8
-    - run: echo Hello ${INPUT_LANG_PATH}
+    - run: echo Hello ${{ inputs.who-to-greet }}.
       shell: bash
-    - run: echo Hello ${INPUT_LANG_PATH}
+    - id: random-number-generator
+      run: echo "::set-output name=random-id::$(echo $RANDOM)"
       shell: bash
 #     - name: Clone YAML-localisation-sync
 #       run: git clone https://github.com/Nuytemans-Dieter/YAML-localisation-sync.git
